Switched to a brighter red for better legibility and design. Fixes #27

--- a/app/src/components/appHeader.less
+++ b/app/src/components/appHeader.less
@@ -6,7 +6,7 @@
     height: 40px;
 
     color: @momoPrimary;
-    background-color: #24292e;
+    background-color: @darkBackground;
 
     padding: 10px 20px 10px 20px;
 
@@ -16,8 +16,6 @@
     .app-title {
         font-size: 18px;
         flex-grow: 1;
-
-        text-shadow: 0px 1px 1px rgba(255,255,255,0.1);
     }
 
     .app-header-create-button {
