--- a/app/src/components/song/plugins/chordPlugin.less
+++ b/app/src/components/song/plugins/chordPlugin.less
@@ -1,6 +1,7 @@
 @import "~normalize.css";
+@import "../../../variables.less";
 
 .slate-chord-plugin-chord {
     font-weight: 600;
-    color: #c10d0d;
+    color: @momoPrimary;
 }
